body branch work flow

--- a/index.html
+++ b/index.html
@@ -39,14 +39,91 @@
   </li>
 </ul>
 </nav>
+
 <!-- showcase -->
+<div>
 <header class="showcase">
+  <div class="left_section">
  <h2>Microsoft 365</h2>
  <p>Turn your ideas into reality, stay safer online and off, and focus on what matters most with Microsoft 365 apps</p>
  <a href="#" class="btn">
   for up to 6 people <i class="fas fa-chevron-right"></i> 
- </a>   
+ </a>
+ </div>
+ <div class="right_section">
+ </div>   
 </header>
 </div>
+<!--cards_1-->
+<header class="cards">
+  <div>
+    <img src="assets/micro-card-1.jpeg" alt="">
+  <h2>Designed for life today-and tomorrow</h2>
+  <p>The next-generation of games.Your
+    <br> goals.Friend and family. Windows 11 
+    was made to bring you closer to everything you love</p>
+    <a href="#">see if your PC is ready <i class="fas fa-chevron-right"></i></a> 
+  </div>
+  <div>
+    <img src="assets/micro-card-2.webp" alt="">
+  <h2>Microsoft Edge</h2>
+  <p>World class performance with more privacy, moreproductivity,and more value while you browse.</p>
+    <a href="#">Download now <i class="fas fa-chevron-right"></i></a> 
+  </div>
+  <div>
+    <img src="assets/micro-card-3.webp" alt="">
+  <h2>Microsoft OneDrive</h2>
+  <p>Save your files and photos to OneDrive and access them from any device, anywhere.</p>
+    <a href="#">Learn more<i class="fas fa-chevron-right"></i></a> 
+  </div>
+  <div>
+    <img src="assets/micro-card-4.webp" alt="">
+  <h2>OneNote</h2>
+  <p>Organize your notes and your life.</p>
+    <a href="#">Learn more<i class="fas fa-chevron-right"></i></a> 
+  </div>
+</header>
+<!-- ios -->
+<section class="ios">
+  <div class="content">
+  <h2>Outlook for iOS and Adroid.</h2>
+  <p>Connect. Organize. Get things done.</p>
+   <a href="#" class="button">
+    Download now <i class="fas fa-chevron-right"></i></a>
+  </div>
+</section>
+<!--cards_1-->
+<header class="cards">
+  <div>
+    <img src="assets/office-img-1.webp" alt="">
+  <h2>Try Microsoft 365 for free</h2>
+  <p>Get Microsoft Teams,secure cloud storage,and premium apps accross devices with a free one-month Microsoft 365 Buisness Standard trial.</p>
+    <a href="#">Start your free trial <i class="fas fa-chevron-right"></i></a> 
+  </div>
+  <!--cards_1-->
+<header class="cards">
+  <div>
+    <img src="assets/office-img-2.webp" alt="">
+  <h2>Welcome to your Windows 365 Cloud PC</h2>
+  <p>Securely stream your Windows experience from the Microsoft cloud to any device.</p>
+    <a href="#">Get it today<i class="fas fa-chevron-right"></i></a> 
+  </div>
+  <!--cards_1-->
+<header class="cards">
+  <div>
+    <img src="assets/office-img3.webp" alt="">
+  <h2>Get Microsoft Teams for free</h2>
+  <p>Online meetings, Chat, and shared cloud storage-all in one place.</p>
+    <a href="#">Sign up for free <i class="fas fa-chevron-right"></i></a> 
+  </div>
+  <!--cards_1-->
+<header class="cards">
+  <div>
+    <img src="assets/office-img-4.webp" alt="">
+  <h2>Empower people and teams with Microsoft Viva</h2>
+  <p>Bring together connection, purpose,insight, and growth with the first employee experience platform built for the hybrid era</p>
+    <a href="#">Learn more about Microsoft Viva <i class="fas fa-chevron-right"></i></a> 
+  </div>
+
 </body>
 </html>    
