--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   </div>
 </section>
 <!--cards_1-->
-<header class="cards">
+<header class="cards_2">
   <div>
     <img src="assets/office-img-1.webp" alt="">
   <h2>Try Microsoft 365 for free</h2>
@@ -101,7 +101,7 @@
     <a href="#">Start your free trial <i class="fas fa-chevron-right"></i></a> 
   </div>
   <!--cards_1-->
-<header class="cards">
+<header class="cards _2">
   <div>
     <img src="assets/office-img-2.webp" alt="">
   <h2>Welcome to your Windows 365 Cloud PC</h2>
@@ -109,7 +109,7 @@
     <a href="#">Get it today<i class="fas fa-chevron-right"></i></a> 
   </div>
   <!--cards_1-->
-<header class="cards">
+<header class="cards_2">
   <div>
     <img src="assets/office-img3.webp" alt="">
   <h2>Get Microsoft Teams for free</h2>
@@ -117,7 +117,7 @@
     <a href="#">Sign up for free <i class="fas fa-chevron-right"></i></a> 
   </div>
   <!--cards_1-->
-<header class="cards">
+<header class="cards_2">
   <div>
     <img src="assets/office-img-4.webp" alt="">
   <h2>Empower people and teams with Microsoft Viva</h2>
