--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
      <img src="./assets/ms-logo.png" alt="ms logo">
 
      <ul class="main-menu">
-        <li><a href="#">Wicrosoft 365</a></li>
+        <li><a href="#">Microsoft 365</a></li>
         <li><a href="#">Office</a></li>
-        <li><a href="#">wWindows</a></li>
+        <li><a href="#">Windows</a></li>
         <li><a href="#">Xbox</a></li>
         <li><a href="#">Support</a></li>
 </ul>
 <ul class="right-menu">
   <li >
     <a href="#">
-        <i class="fa-solid fa-magnifying-glass"></i>
+       All Microsoft <i class="fa-solid fa-magnifying-glass"></i>
     </a>
   </li> 
   <li>
@@ -92,38 +92,41 @@
     Download now <i class="fas fa-chevron-right"></i></a>
   </div>
 </section>
-<!--cards_1-->
-<header class="cards_2">
+<div>
+  <h1>For business</h1>
+</div>
+<header class="cards">
   <div>
-    <img src="assets/office-img-1.webp" alt="">
+    <img src="assets/office-img-1.webp" alt="office-img-1">
   <h2>Try Microsoft 365 for free</h2>
-  <p>Get Microsoft Teams,secure cloud storage,and premium apps accross devices with a free one-month Microsoft 365 Buisness Standard trial.</p>
-    <a href="#">Start your free trial <i class="fas fa-chevron-right"></i></a> 
+  <p>Get Microsoft Teams, secure cloud storage, and premium app accross devices with a free one-month Microsoft 365 Buisness Standard trial.</p>
+    <a href="#">Start your free trial. <i class="fas fa-chevron-right"></i></a> 
   </div>
-  <!--cards_1-->
-<header class="cards _2">
   <div>
-    <img src="assets/office-img-2.webp" alt="">
-  <h2>Welcome to your Windows 365 Cloud PC</h2>
-  <p>Securely stream your Windows experience from the Microsoft cloud to any device.</p>
-    <a href="#">Get it today<i class="fas fa-chevron-right"></i></a> 
+    <img src="assets/office-img-2.webp" alt="office-img-2">
+  <h2>Welcome to your Window 365 Cloud PC</h2>
+  <p>Secure stream your Windows experience from the Microsoft cloud to any device.</p>
+    <a href="#"> Get it today<i class="fas fa-chevron-right"></i></a> 
   </div>
-  <!--cards_1-->
-<header class="cards_2">
   <div>
-    <img src="assets/office-img3.webp" alt="">
-  <h2>Get Microsoft Teams for free</h2>
-  <p>Online meetings, Chat, and shared cloud storage-all in one place.</p>
-    <a href="#">Sign up for free <i class="fas fa-chevron-right"></i></a> 
+    <img src="assets/office-img3.webp" alt="office-img-3">
+  <h2>Get microsoft Teams for free</h2>
+  <p>Online meetings chat, and shared cloud storage--all in one place.</p>
+    <a href="#">Sign up for free<i class="fas fa-chevron-right"></i></a> 
   </div>
-  <!--cards_1-->
-<header class="cards_2">
   <div>
-    <img src="assets/office-img-4.webp" alt="">
-  <h2>Empower people and teams with Microsoft Viva</h2>
-  <p>Bring together connection, purpose,insight, and growth with the first employee experience platform built for the hybrid era</p>
-    <a href="#">Learn more about Microsoft Viva <i class="fas fa-chevron-right"></i></a> 
+    <img src="assets/office-img-4.webp" alt="office-img-4">
+  <h2>Empower people and teams with Microsoft Viva.</h2>
+  <p>Bring together connection purpose, insight, and growth with the first employee experience platform built for hybrid era.</p>
+    <a href="#"> Learn more about microsoft Viva<i class="fas fa-chevron-right"></i></a> 
   </div>
-
+  </header>
+  <header class="icon">
+  <div>
+    <p>Follow Microsoft</p>
+    <img src="assets/Twitter 2x.webp" alt="twiter">
+    <img src="assets/Linkedin 2x.avif" alt="link"> 
+  </div>
+</header>
 </body>
 </html>    
