body branch work two

--- a/index.html
+++ b/index.html
@@ -121,12 +121,68 @@
     <a href="#"> Learn more about microsoft Viva<i class="fas fa-chevron-right"></i></a> 
   </div>
   </header>
-  <header class="icon">
-  <div>
+  <!-- follow -->
+  <section class="follow">
     <p>Follow Microsoft</p>
+    <a href="https://twitter.com">
     <img src="assets/Twitter 2x.webp" alt="twiter">
-    <img src="assets/Linkedin 2x.avif" alt="link"> 
+    </a>
+    <a href="https://linkedin.com"></a>
+    <img src="assets/Linkedin 2x.avif" alt="link">
+    </a> 
   </div>
 </header>
+<!-- links -->
+<section class="links">
+  <div class="links-inner">
+   <ul>
+    <li><h3>Microsoft Store</h3></li>
+    <li><a href="#">ReturnsAccount profile</a></li>
+    <li><a href="#">Order tracking</a></li>
+    <li><a href="#"></a></li>
+   </ul> 
+    </div>
+    <ul>
+    <li><h3>Education</h3></li>
+    <li><a href="#">Microsoft in education</a></li>
+    <li><a href="#">Devices for education</a></li>
+    <li><a href="#">Microsoft Teams for Education</a></li>
+    <li><a href="#"></a>Microsoft 365 Education</li>
+    <li><a href="#"></a>Office Education</li>
+    <li><a href="#"></a>Educator training and development</li>
+    <li><a href="#">Deals for student and parents</a></li>
+    <li><a href="#">Azure for students</a></li>
+   </ul>
+   <ul>
+    <li><h3>Buisness</h3></li>
+    <li><a href="#">Microsoft Cloud</a></li>
+    <li><a href="#">Microsoft Security</a></li>
+    <li><a href="#">Azure</a></li>
+    <li><a href="#">Dynamic 365</a></li>
+    <li><a href="#">Microsoft 365</a></li>
+    <li><a href="#">Microsoft Advertising</a></li>
+    <li><a href="#">Microsoft Industry</a></li>
+    <li><a href="#">Microsoft Teams</a></li>
+   </ul>
+   <ul>
+    <li><h3>Company</h3></li>
+    <li><a href="#">Careers</a></li>
+    <li><a href="#">About Microsoft</a></li>
+    <li><a href="#">Company news</a></li>
+    <li><a href="#">Investors</a></li>
+    <li><a href="#">Sustainability</a></li>
+   </ul>
+   <ul>
+    <li><h3>Developer & IT</h3></li>
+    <li><a href="#">Developer Center</a></li>
+    <li><a href="#">Documentation</a></li>
+    <li><a href="#">Microsoft Learn</a></li>
+    <li><a href="#">Microsoft Tech Community</a></li>
+    <li><a href="#">Azure Marketplace</a></li>
+    <li><a href="#">AppSource</a></li>
+    <li><a href="#">Microsoft Power Platform</a></li>
+    <li><a href="#">Visual Studio</a></li>
+   </ul>
+  </section>
 </body>
 </html>    
