--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <main class="">
   <div class="container">
     <!-- nav -->
     <nav id="hero" class="main-nav">
@@ -215,6 +216,7 @@
       </ul>
     </div>
   </footer>
+  </main>
 </body>
 
 </html>
